# portfolio

./: README.md
StrataSolutions/: StrataSolutions.pro
pbfg/: README.txt
pbfg/client/: CMakeLists.txt  client.cxx
pbfg/server/: CMakeLists.txt  main.cxx  server.cxx  server.hpp  workers.cxx  workers.hpp  writer.cxx  writer.hpp
pbfg/server/include/op/: date.hpp  net.hpp  pool.hpp
